--- a/package/gluon-luci-theme/Makefile
+++ b/package/gluon-luci-theme/Makefile
@@ -9,7 +9,7 @@ PKG_RELEASE:=1
 
 PKG_BUILD_DIR := $(BUILD_DIR)/$(PKG_NAME)
 
-include $(GLUONDIR)/include/package.mk
+include ../gluon.mk
 
 
 define Package/gluon-luci-theme
